--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,4 @@
+yaml
 services:
   - type: web
     name: telegram-url-uploader-bot
@@ -8,23 +9,23 @@ services:
     dockerContext: .
     envVars:
       - key: APP_ID
-        sync: false
+        value: 20288994
       - key: API_HASH
-        sync: false
+        value: d702614912f1ad370a0d18786002adbf
       - key: BOT_TOKEN
-        sync: false
+        value: 8370060694:AAGkcQUUkxne2v5Rh0EhKFGX88Te-kHNG7g
       - key: BOT_USERNAME
-        sync: false
+        value: "@Urluploader_z_bot"
       - key: DATABASE_URL
-        sync: false
+        value: mongodb+srv://moviedatabase:venura%408907@cluster0.hg0etvt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       - key: LOG_CHANNEL
-        sync: false
+        value: -1002897456594
       - key: OWNER_ID
-        sync: false
+        value: 8312532076
       - key: SESSION_STR
         value: ""
       - key: UPDATE_CHANNEL
-        sync: false
+        value: https://t.me/zerodevbro
       - key: PYTHONUNBUFFERED
         value: "1"
     autoDeploy: true
